doc: document structure

--- a/Iteration_1/项目启动文档.md
+++ b/Iteration_1/项目启动文档.md
@@ -1,1 +1,43 @@
 ## 项目启动文档
+
+### 团队名称：OwO
+
+### 团队组成人员：
+
+| 团队成员 | 学号      | 角色 | 工作职责 |
+| -------- | --------- | ---- | -------- |
+| 何文兵   | 181250043 |      |          |
+| 戎鑫     | 181250120 |      |          |
+| 巫夷     | 181250153 |      |          |
+| 赵睿豪   | 181250192 |      |          |
+
+### 团队建设：
+
+### 成员通讯录：
+
+### 工作时间表：
+
+### 沟通计划：
+
+#### 例会制度
+
+### 沟通规范：
+
+### 团队成员职责：
+
+### 制定相关赏惩条例：
+
+### 版本控制规则：
+
+### 项目启动会议：
+
+#### 项目描述：
+
+#### 项目目标：
+
+#### 交付产物：
+
+#### 项目假设：
+
+### 项目初步计划：
+
