--- a/Iteration_1/需求规格说明书.md
+++ b/Iteration_1/需求规格说明书.md
@@ -1,1 +1,78 @@
 ## 需求规格说明书
+
+团队名称：OwO
+
+完成人：
+
+最终修改时间：2021.3.14
+
+更新历史：
+
+| 修改人员 | 日期      | 变更原因       | 版本号 |
+| -------- | --------- | -------------- | ------ |
+| 何文兵   | 2021.3.14 | 初始化文档结构 | V1.0   |
+|          |           |                |        |
+|          |           |                |        |
+
+### 1 引言
+
+#### 1.1 目的
+
+#### 1.2 范围
+
+#### 1.3 定义、首字母缩写和缩略语
+
+#### 1.4 参考文献
+
+### 2 总体描述
+
+#### 2.1 产品前景
+
+#### 2.2 产品功能
+
+#### 2.3 用户特征
+
+#### 2.4 约束
+
+#### 2.5 假设与依赖
+
+### 3 详细需求描述
+
+#### 3.1 对外接口需求
+
+#### 3.1.1 用户界面
+
+#### 3.1.2 硬件接口
+
+#### 3.1.3 软件接口
+
+#### 3.1.4 通信接口
+
+### 3.2 功能需求
+
+特征描述
+
+刺激/响应序列
+
+### 3.3 性能需求
+
+### 3.4 约束
+
+### 3.5 质量属性
+
+#### 3.5.1 可靠性
+
+#### 3.5.2 可用性
+
+#### 3.5.3 安全性
+
+#### 3.5.4 可维护性
+
+#### 3.5.5 易用性
+
+### 3.6 其他需求
+
+#### 3.6.1 数据需求
+
+#### 3.6.2 安装需求
+
