--- a/Iteration_1/项目设计文档.md
+++ b/Iteration_1/项目设计文档.md
@@ -1,1 +1,34 @@
-## 项目设计文档
+## 项目架构设计文档
+
+团队名称：OwO
+
+创建者：何文兵
+
+文档更新记录：2021.3.14
+
+| 修改日期  | 作者   | 版本描述       | 版本 |
+| --------- | ------ | -------------- | ---- |
+| 2021.3.14 | 何文兵 | 文档结构初始化 | V1.0 |
+|           |        |                |      |
+|           |        |                |      |
+
+### 1 总体介绍
+
+#### 1.1 编写目的
+
+#### 1.2 对象和范围
+
+#### 1.3 参考文献
+
+#### 1.4 名词与术语
+
+### 2 系统的分层架构
+
+#### 2.1 系统的逻辑层次
+
+#### 2.2 系统的物理层次
+
+#### 2.3 系统的架构设计
+
+#### 2.4 系统的组件和组件接口
+
