--- a/Iteration_1/测试文档.md
+++ b/Iteration_1/测试文档.md
@@ -1,1 +1,97 @@
-## 测试文档
+<div align='center' ><font size=7><b>测试文档</b></font></div> 
+
+团队名称：OwO
+
+完成人：巫夷
+
+最终修改时间：2021.3.20
+
+文档更新记录表：
+
+| 修改人员 | 日期      | 变更原因         | 版本号 |
+| -------- | --------- | ---------------- | ------ |
+| 戎鑫     | 2021.3.19 | 初始化文档       | V1.0   |
+| 巫夷     | 2021.3.19 | 完成文档主要内容 | V2.0   |
+
+[TOC]
+
+
+
+# 1. 单元测试报告
+
+## 1.1 撰写单元测试报告目的
+
+1）整理和汇总单元测试结果，形成正式的文档
+
+2）为团队内部对单元的评审提供依据
+
+3）将该文档纳入软件配置管理库
+
+## 1.2 单元测试的范围和工具
+
+单元测试使用工具JUnit完成了对知识图谱平台的主要类的方法的测试。
+
+## 1.3 测试用例执行情况记录
+
+# 2. 集成测试报告
+
+## 2.1 引言部分
+
+### 2.1.1 撰写集成测试报告的目的
+
+1）汇总和统计集成测试的测试结果，并形成最终文档。
+
+2）给出对应测试结果的分析和总结，为团队的开发和测试评审提供依据。
+
+### 2.1.2 术语定义
+
+1）集成测试：每个模块通过单元测试后，将所有功能模块集成在一起进行测试，以验证各模块的正确性和模块接口的正确性。
+
+2）相互审查：小组内部成员对他人已测试过的模板进行抽样测试，提高测试效率。
+
+### 2.1.3 参考资料
+
+1）《需求分析说明书》
+
+2）《详细设计文档》
+
+3）《单元测试计划》
+
+4）《单元测试报告》
+
+### 2.1.4 限制与约束
+
+该部分测试主要采用代码审查，发现核心源代码中存在的错误与缺陷；经过对数据流进行分析后，编写测试代码，发现功能上的错误。
+
+## 2.2 概述
+
+### 2.2.1 测试对象
+
+本测试主要为知识图谱平台的集成测试。该平台是一个基于C/S的平台。主要功能包括用户登录，图片构建，编辑图谱，图谱导出等。
+
+### 2.2.2 测试目的
+
+开发人员开发完成及单元测试后，测试所有单元在按照详细设计说明文档组装模块、子系统或系统的过程中，各部分是否能正常工作并达到相应要求。确保各单元组合成为模块或系统后能够按照意图运行，同时确保增量的行为正确。
+
+### 2.2.3 测试环境
+
+1）操作系统环境：windows10
+
+2）数据库：MySQL5.0
+
+3）测试工具：JUnit
+
+### 2.2.4 测试地点
+
+个人电脑
+
+## 2.3 测试结果
+
+### 2.3.1 测试结果记录
+
+### 2.3.2 测试结果分析
+
+#### 2.3.2.1 测试结果统计
+
+#### 2.3.2.2 结论
+
