--- a/Iteration_1/测试文档.md
+++ b/Iteration_1/测试文档.md
@@ -11,7 +11,7 @@
 | 修改人员 | 日期      | 变更原因         | 版本号 |
 | -------- | --------- | ---------------- | ------ |
 | 戎鑫     | 2021.3.19 | 初始化文档       | V1.0   |
-| 巫夷     | 2021.3.19 | 完成文档主要内容 | V2.0   |
+| 巫夷     | 2021.3.19 | 完成文档测试内容 | V1.1   |
 
 [TOC]
 
@@ -32,6 +32,102 @@
 单元测试使用工具JUnit完成了对知识图谱平台的主要类的方法的测试。
 
 ## 1.3 测试用例执行情况记录
+
+<table>
+	<tr>
+	    <th colspan="3">测试用例编号</th>
+	    <th colspan="3">ChartServiceTest-001</th>
+	</tr >
+	<tr >
+	    <td colspan="2">测试单元</td>
+        <td colspan="4">ChartService</td>
+	</tr>
+	<tr>
+	    <td colspan="1">是否有测试代码</td>
+	    <td colspan="1">是</td>
+        <td colspan="2">测试代码</td>
+        <td colspan="2">saveChartTest1</td>
+	</tr>
+	<tr>
+	    <td colspan="2">前提条件</td>
+	    <td colspan="4">用户登录并进入图谱编辑</td>
+	</tr>
+	<tr>
+	    <td colspan="1">序号</td>
+	    <td colspan="1">步骤及操作</td>
+        <td colspan="1">预期结果</td>
+        <td colspan="1">实际执行结果</td>
+        <td colspan="1">Pass/Fail</td>
+        <td colspan="1">备注</td>
+	</tr>
+	<tr>
+         <td colspan="1">1</td>
+	    <td colspan="1">输入图谱信息</td>
+        <td colspan="1">获得图谱信息并通知前端</td>
+        <td colspan="1">前端信息通知正确</td>
+        <td colspan="1">Pass</td>
+        <td colspan="1"></td>
+	</tr>
+	<tr>
+	    <td colspan="1">测试人员</td>
+	    <td colspan="2">巫夷</td>
+         <td colspan="1">测试日期</td>
+	    <td colspan="2">2021.3.18</td>
+	</tr>
+	<tr>
+	    <td colspan="4">测试用例实际执行成本</td>
+	    <td colspan="2">1人日</td>
+	</tr>
+</table>
+
+
+<table>
+	<tr>
+	    <th colspan="3">测试用例编号</th>
+	    <th colspan="3">ChartServiceTest-002</th>
+	</tr >
+	<tr >
+	    <td colspan="2">测试单元</td>
+        <td colspan="4">ChartService</td>
+	</tr>
+	<tr>
+	    <td colspan="1">是否有测试代码</td>
+	    <td colspan="1">是</td>
+        <td colspan="2">测试代码</td>
+        <td colspan="2">saveChartTest2</td>
+	</tr>
+	<tr>
+	    <td colspan="2">前提条件</td>
+	    <td colspan="4">用户登录并进入图谱编辑</td>
+	</tr>
+	<tr>
+	    <td colspan="1">序号</td>
+	    <td colspan="1">步骤及操作</td>
+        <td colspan="1">预期结果</td>
+        <td colspan="1">实际执行结果</td>
+        <td colspan="1">Pass/Fail</td>
+        <td colspan="1">备注</td>
+	</tr>
+	<tr>
+         <td colspan="1">1</td>
+	    <td colspan="1">输入图谱信息</td>
+        <td colspan="1">获得图谱信息并通知前端</td>
+        <td colspan="1">前端信息通知正确</td>
+        <td colspan="1">Fail</td>
+        <td colspan="1">未考虑到图谱为空的情况</td>
+	</tr>
+	<tr>
+	    <td colspan="1">测试人员</td>
+	    <td colspan="2">巫夷</td>
+         <td colspan="1">测试日期</td>
+	    <td colspan="2">2021.3.18</td>
+	</tr>
+	<tr>
+	    <td colspan="4">测试用例实际执行成本</td>
+	    <td colspan="2">1人日</td>
+	</tr>
+</table>
+
 
 # 2. 集成测试报告
 
@@ -89,9 +185,81 @@
 
 ### 2.3.1 测试结果记录
 
+#### （1）针对图标组件的集成测试
+
+图表保存的成功场景
+
+<table>
+	<tr>
+	    <th colspan="1">测试目的</th>
+	    <th colspan="1">涉及测试用例</th>
+        <th colspan="1">依赖条件</th>
+        <th colspan="1">测试步骤</th>
+        <th colspan="1">预期结果</th>
+        <th colspan="1">实际结果</th>
+        <th colspan="1">Pass/Fail</th>
+        <th colspan="1">实际执行成本</th>
+	</tr >
+	<tr >
+	    <td colspan="1">测试用户可以正常保存图表</td>
+	    <td colspan="1">saveChartTest1</td>
+        <td colspan="1">用户账号存在</td>
+        <td colspan="1">1）用户登录账户<br/>2）用户选择图谱编辑<br/>3）用户保存图谱</td>
+        <td colspan="1">保存成功</td>
+        <td colspan="1">保存成功</td>
+        <td colspan="1">Pass</td>
+        <td colspan="1">1人日</td>
+	</tr>
+</table>
+
+图表保存的失败场景
+
+<table>
+	<tr>
+	    <th colspan="1">测试目的</th>
+	    <th colspan="1">涉及测试用例</th>
+        <th colspan="1">依赖条件</th>
+        <th colspan="1">测试步骤</th>
+        <th colspan="1">预期结果</th>
+        <th colspan="1">实际结果</th>
+        <th colspan="1">Pass/Fail</th>
+        <th colspan="1">实际执行成本</th>
+	</tr >
+	<tr >
+	    <td colspan="1">测试用户保存空图表时获知失败信息</td>
+	    <td colspan="1">saveChartTest2</td>
+        <td colspan="1">用户账号存在</td>
+        <td colspan="1">1）用户登录账户<br/>2）用户选择图谱编辑并删除所有节点和关系<br/>3）用户保存图谱</td>
+        <td colspan="1">保存失败，并通知用户</td>
+        <td colspan="1">指针为空，报错</td>
+        <td colspan="1">Fail</td>
+        <td colspan="1">1人日</td>
+	</tr>
+</table>
+
 ### 2.3.2 测试结果分析
 
 #### 2.3.2.1 测试结果统计
 
+共涉及10个测试用例，执行时步骤都和测试用例相符。
+
+测试用例通过率：90%。
+
+测试覆盖率：90%。
+
+发现缺陷：1个。
+
+测试执行成本： 2人日。
+
+因此，用例质量=1/10*100%=10%。
+
+缺陷发现效率=1/2=0.5个人日
+
 #### 2.3.2.2 结论
+
+1）已经对集成测试执行情况中的各项问题做了全面记录。
+
+2）测试覆盖率达90%，已运行所有测试用例，满足测试计划中的验收标准。
+
+3）测试用例通过率90%，修改后通过率100%，满足验收标准。
 
