doc: 测试文档的性能测试

--- a/Iteration_1/测试文档.md
+++ b/Iteration_1/测试文档.md
@@ -263,3 +263,169 @@
 
 3）测试用例通过率90%，修改后通过率100%，满足验收标准。
 
+# 3.系统测试报告
+
+## 3.1引言部分
+
+### 3.1.1撰写系统测试报告的目的
+
+1）通过对测试结果的分析，得到团队内部对软件质量的评价。
+
+2）评估测试测试执行和和测试计划是否符合。
+
+3）分析系统存在的缺陷，为修复和预防系统级别的BUG提供建议。
+
+### 3.1.2相关测试内容
+
+1）用户测试：主要测试系统的功能，操作性，性能，人机对话，系统界面，和安全性等。主要参考对象为所有者或用户。
+
+2）功能测试：这要测试系统是否实现预计结果，这是软件的基本测试。主要参考对象为所有者或用户，开发人员和测试人员等。
+
+3）压力测试：用来评估在超越最大负载的情况下系统将如何运行。主要参考对象为项目经理，开发经理，测试人员。
+
+4）性能测试：反映系统的反应时间，CPU使用率，占用内存大小和系统反应速度等指标
+
+### 3.1.3相关术语
+
+1）系统：子系统的集合
+
+2）子系统：模块的集合
+
+3）系统参数：控制系统的行为及流程的参数，内容存储在系统数据库中，一般由系统管理员维护。
+
+4）用户参数：控制各工作站的界面，输入法等参数
+
+5）运行参数：控制程序的启动以及与数据库的连接等，内容存储在Windows系统的注册表中，第一次使用系统程序时系统会自动提示输入各种参数
+
+6）角色：一组具有相同权限的用户集合
+
+7）权限：执行某个功能或操作某个模块，某个子系统的权利
+
+8）用户：操作系统的人
+
+### 3.1.4参考资料
+
+1）《需求规格说明书》
+
+2）《详细设计文档》
+
+3）《单元测试报告》
+
+4）《集成测试报告》
+
+### 3.1.5测试时间安排
+
+| 阶段     | 测试内容           | 开始时间  | 结束时间  | 负责人                     |
+| -------- | ------------------ | --------- | --------- | -------------------------- |
+| 第一阶段 | 功能测试，性能测试 | 2021.3.19 | 2021.3.19 | 何文兵，赵睿豪，戎鑫，巫夷 |
+
+## 3.2测试概要
+
+### 3.2.1测试对象
+
+本测试主要为知识图谱系统的系统测试
+
+### 3.2.2测试环境
+
+和集成测试环境一致
+
+### 3.2.3测试地点
+
+个人住址
+
+## 3.3测试用例
+
+### 3.3.1功能测试
+
+#### （1）针对用户登录注册信息管理功能的系统测试
+
+| 测试编号 | ST-FT001                            |
+| -------- | ----------------------------------- |
+| 测试功能 | 用户注册登录                        |
+| 用例描述 | 用户打开主界面注册并登录            |
+| 预测结果 | 1）用户成功注册<br/>2）用户成功登录 |
+| 实际结果 | 用户成功注册以及登录                |
+| 结论     | Pass                                |
+| 执行成本 | 0.25人日                            |
+
+
+
+#### （2）针对知识图谱修改功能的系统测试
+
+| 测试编号 | ST-FT002                                                     |
+| -------- | ------------------------------------------------------------ |
+| 测试功能 | 用户修改知识图谱                                             |
+| 用例描述 | 用户选择实体，关系进行增加，删除，修改                       |
+| 预测结果 | 用户成功增加，删除，修改实体和关系                           |
+| 实际结果 | 用户成功增加，删除，修改实体和关系，但在遇到重复实体名称时报错 |
+| 结论     | Fail                                                         |
+| 执行成本 | 0.25人日                                                     |
+
+#### （3）针对知识图谱导出功能的系统测试
+
+| 测试编号 | ST-FT003                              |
+| -------- | ------------------------------------- |
+| 测试功能 | 用户将知识图谱信息导出为图片和XML文件 |
+| 用例描述 | 用户选择导出图谱图片和XML文件         |
+| 预测结果 | 用户成功导出图片和XML文件             |
+| 实际结果 | 用户成功导出图片和XML文件             |
+| 结论     | Pass                                  |
+| 执行成本 | 0.25人日                              |
+
+#### （4）针对知识图谱保存功能的系统测试
+
+| 测试编号 | ST-FT004                                          |
+| -------- | ------------------------------------------------- |
+| 测试功能 | 用户将知识图谱信息保存                            |
+| 用例描述 | 用户选择保存知识图谱                              |
+| 预测结果 | 1）用户保存知识图谱<br/>2）用户受到保存结果的通知 |
+| 实际结果 | 用户成功保存知识图谱，但空的知识图谱保存时报错    |
+| 结论     | Fail                                              |
+| 执行成本 | 0.25人日                                          |
+
+### 3.3.2性能测试
+
+#### （1）针对响应时间的性能测试
+
+| 测试编号 | ST-PT001                 |
+| -------- | ------------------------ |
+| 性能描述 | 用户注册账号的响应时间   |
+| 前提条件 | 用户账号已经访问注册界面 |
+| 期望性能 | 系统在0.5秒内响应        |
+| 实际结果 | 系统响应时间为0.2秒      |
+| 结论     | Pass                     |
+| 执行成本 | 2人日                    |
+
+| 测试编号 | ST-PT002               |
+| -------- | ---------------------- |
+| 性能描述 | 用户登录账号的响应时间 |
+| 前提条件 | 用户账号已存在         |
+| 期望性能 | 系统在0.5秒内响应      |
+| 实际结果 | 系统响应时间为0.3秒    |
+| 结论     | Pass                   |
+| 执行成本 | 2人日                  |
+
+## 3.4测试结果及分析
+
+### 3.4.1BUG分布结果
+
+| 功能/模块    | Bug数目 |
+| ------------ | ------- |
+| 注册         | 0       |
+| 登录         | 0       |
+| 图谱修改     | 2       |
+| 图谱信息导出 | 0       |
+| 图谱保存     | 1       |
+| 总计         | 3       |
+
+### 3.4.2系统质量属性评价
+
+| 质量属性 | 已完成                           | 缺陷                                             |
+| -------- | -------------------------------- | ------------------------------------------------ |
+| 功能性   | 基本实现了各个功能               | 图谱数据的持久化保存没有实现，用户权限还存在问题 |
+| 易用性   | 通过点击和文字提示非常容易使用   | 图谱修改时，用户无法直观看到图谱，只有输入框     |
+| 可靠性   | 系统不容易崩溃，且容易恢复       |                                                  |
+| 效率     | 响应时间快，用户体验良好         |                                                  |
+| 可维护性 | 对函数和模块经行了很好的封装     | 使用了现有框架，更换框架的代价很大               |
+| 可移植性 | 对功能进行了很好的封装和接口设计 |                                                  |
+
