doc: edit design doc

--- a/Iteration_1/项目设计文档.md
+++ b/Iteration_1/项目设计文档.md
@@ -4,12 +4,13 @@
 
 创建者：何文兵
 
-文档更新记录：2021.3.21
+文档更新记录：2021.4.16
 
 | 修改日期  | 作者   | 版本描述                   | 版本 |
 | --------- | ------ | -------------------------- | ---- |
 | 2021.3.14 | 何文兵 | 文档结构初始化             | V1.0 |
 | 2021.3.21 | 何文兵 | 完成迭代一项目结构设计文档 | V2.0 |
+| 2021.4.16 | 赵睿豪 | 完成迭代二项目结构设计文档 | V3.0 |
 
 ### 1 总体介绍
 
@@ -34,9 +35,12 @@
 | :---------: | ------------------------------------------------------------ | ---- |
 |    MySQL    | 一个小型关系型数据管理系统，开发者为瑞典MySQL AB公司，属于开源软件 |      |
 |     JSP     | Java Server Pages，是一种动态网页技术标准                    |      |
-|    IDEA     | 开发工具                                                     |      |
+|    IDEA     | 后端开发工具                                                 |      |
+|  WebStorm   | 前端开发工具                                                 |      |
 |     VUE     | 一套自底向上型用于构建用户界面的渐进式JavaScript框架         |      |
 | Spring Boot | 一个开源的简化配置过程的轻量级框架                           |      |
+| Element-UI  | 一套为开发者、设计师和产品经理准备的基于 VUE 2.0 的组件库    |      |
+|    axios    | 一个基于 promise 的 HTTP 库                                  |      |
 
 ### 2 系统的分层架构
 
@@ -100,6 +104,12 @@
 | I4     | 连接Mapper和PO          | 语法     | Return(PO)<br />Interface(criteria)              |
 |        |                         | 前置条件 | 数据库连接正常                                   |
 |        |                         | 后置条件 | PO对象写入数据库或从数据库中<br />返回PO对象     |
+| l5     | 连接api和response       | 语法     | Return response.data                             |
+|        |                         | 前置条件 | 前后端服务器运行正常                             |
+|        |                         | 后置条件 | 将response.data返回                              |
+| l6     | 连接api和store          | 语法     | Return axios()                                   |
+|        |                         | 前置条件 | response.res为success，即应答成功                |
+|        |                         | 后置条件 | 处理返回数据                                     |
 
 ### 3 Jenkins配置
 
